--- a/src/scss/components/img.scss
+++ b/src/scss/components/img.scss
@@ -1,15 +1,28 @@
 .crop {
     width: 400px;
-    height: 300px;
+    height: 200px;
     overflow: hidden;
+    border-radius: $border;
     img {
         width: 100%;
     }
 }
 
-@media only screen and (max-width: 940px) {
-    .crop {
-        width: 200px;
-        height: 150px;
+.crop2 {
+    width: 600px;
+    overflow: hidden;
+    border-radius: $border;
+    img {
+        width: 100%;
+    }
+}
+
+.crop3 {
+    width: 600px;
+    height: 400px;
+    overflow: hidden;
+    border-radius: $border;
+    img {
+        width: 100%;
     }
 }
