--- a/src/scss/components/nav.scss
+++ b/src/scss/components/nav.scss
@@ -8,6 +8,10 @@ header {
     padding: 2px 10px;
     cursor: pointer;
     }
+    .logo {
+        font-size: 26px;
+        font-family: inherit;
+    }
     nav {
         ul {
             list-style: none;
@@ -24,24 +28,31 @@ header {
 }
 
 .mobile-nav {
-    position: absolute;
-    display: block;
-    top: 0;
-    right: 0;
-    color: red;
-}
-
-@media only screen and (max-width: 1000px) {
-    header {
-        nav {
-            padding: 10px 10px;
-            .fa-bars {
-                display: inline;
-                cursor: pointer;
-              }
-              ul li {
-                display: none;
-              }
+	height: 100%;
+	width: 100%;
+	position: fixed;
+	z-index: 2;
+	top: 0;
+	left: 0;
+	background-color: grey;
+	overflow-x: hidden;
+    transition: 0.3s ease-in-out;
+    ul {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        top: 25%;
+        width: 100%;
+        text-align: center;
+        margin-top: 30px;
+        li {
+            display: block !important;
         }
-    } 
+    }
+    .fa-window-close {
+        position: absolute;
+        top: 5%;
+        right: 5%;
+        font-size: 2em;
+    }
 }
