--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -8,12 +8,14 @@ $shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
 $border: 10px;
 
 @import './components/general.scss';
+@import './components/textchanges.scss';
 @import './components/img.scss';
 @import './components/buttons.scss';
-
+@import './components/media.scss';
+@import './components/layouts.scss';
 @import './components/container.scss';
 @import './components/nav.scss';
 @import './components/blogfilter.scss';
-
+@import './components/blogspecific.scss';
 @import './components/toppage.scss';
 @import './components/footer.scss';
