--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -4,6 +4,7 @@ footer {
     flex-direction: row;
     justify-content: space-between;
     border-top: solid 2px $tertiary-color;
+    padding-top: 6px;
     ul {
         display: flex;
         list-style: none;
