--- a/src/scss/components/blogspecific.scss
+++ b/src/scss/components/blogspecific.scss
@@ -1,8 +1,18 @@
 .article {
-    p p strong {
-        color: $tertiary-color;
-        font-size: 24px;
-        padding: 100px 0px 0px 0px;
+    ul {
+        padding-left: 25px;
+        padding-bottom: 20px;
+    }
+    ol {
+        padding-left: 18px;
+        padding-bottom: 20px;
+    }
+    p p {
+        padding-bottom: 20px;
+        strong {
+            color: $tertiary-color;
+            font-size: 24px;
+        }
     }
     a {
         text-decoration: underline;
