--- a/src/scss/components/general.scss
+++ b/src/scss/components/general.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 
 * {
     margin: 0 auto;
@@ -8,14 +8,16 @@
 
 html {
     height: 100%;
+    scroll-behavior: smooth !important;
 }
 
 body {
-    font-family: 'Baloo Bhaina 2', cursive;
+    font-family: 'Raleway', sans-serif;
     background-color: $background-color-light;
     color: $background-color-dark;
-    font-size: 20px;
+    font-size: 24px;
     transition: 0.3s ease-in-out;
+    line-height: 1.6;
     .toggler {
         padding: 2px;
         border-radius: $border;
@@ -27,10 +29,6 @@ body {
             background-color: $secondary-color;
         }
     }
-}
-
-section {
-    min-height: 80vh;
 }
 
 a {
@@ -52,4 +50,8 @@ button {
 
 .active {
     color: $tertiary-color;
+}
+
+.mb10 {
+    margin-bottom: 10px;
 }
