--- a/src/scss/components/layouts.scss
+++ b/src/scss/components/layouts.scss
@@ -9,9 +9,6 @@
     > p {
         padding: 10px 200px;
     }
-    .grid {
-        padding: 100px 0px;
-    }
 }
 
 //Grid layouts
@@ -21,6 +18,7 @@
     align-items: center;
     text-align: center;
     grid-gap: 30px;
+    min-height: 80vh;
     .card {
     padding: 10px;
     transition: transform 1s;
@@ -33,11 +31,14 @@
 
 .reverse {
     direction: rtl;
+    p {
+        direction: ltr;
+    }
 }
 
 .grid2 {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(550px, 1fr));
     grid-gap: 30px;
     align-items: center;
     text-align: center;
@@ -45,13 +46,29 @@
     padding: 10px;
     transition: transform 1s;
     border-radius: $border;
-    min-height: 450px;
+    min-height: 460px;
+    max-height: 460px;
+    overflow: hidden;
+    width: 500px;
+    box-shadow: $shadow;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
         &:hover {
-            box-shadow: $shadow;
             img {
                 transition: transform 1s;
                 transform: scale(1.1);
             }
         }
+    }
+}
+
+.outline {
+    box-shadow: $shadow;
+    border-radius: $border;
+    margin: 80px;
+    padding: 30px;
+    > * {
+        padding: 20px;
     }
 }
