--- a/src/scss/components/nav.scss
+++ b/src/scss/components/nav.scss
@@ -4,13 +4,13 @@ header {
     align-items: flex-end;
     margin: 20px 30px;
     border-bottom: solid 2px $tertiary-color;
+    padding-bottom: 6px;
     svg {
     padding: 2px 10px;
     cursor: pointer;
     }
     .logo {
         font-size: 26px;
-        font-family: inherit;
     }
     nav {
         ul {
