--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -1,18 +1,20 @@
-@import url("https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
 * {
   margin: 0 auto;
   padding: 0;
   scroll-behavior: smooth !important; }
 
 html {
-  height: 100%; }
+  height: 100%;
+  scroll-behavior: smooth !important; }
 
 body {
-  font-family: 'Baloo Bhaina 2', cursive;
+  font-family: 'Raleway', sans-serif;
   background-color: #efefef;
   color: #292a32;
-  font-size: 20px;
-  transition: 0.3s ease-in-out; }
+  font-size: 24px;
+  transition: 0.3s ease-in-out;
+  line-height: 1.6; }
   body .toggler {
     padding: 2px;
     border-radius: 10px; }
@@ -21,9 +23,6 @@ body {
     color: #efefef; }
     body.dark-mode .toggler {
       background-color: #41B3A3; }
-
-section {
-  min-height: 80vh; }
 
 a {
   outline: none;
@@ -40,6 +39,12 @@ button {
 
 .active {
   color: #ff6472; }
+
+.mb10 {
+  margin-bottom: 10px; }
+
+h1, h2, h3, h4, h5, h6 {
+  font-size: 28px; }
 
 .text-center {
   text-align: center; }
@@ -58,8 +63,8 @@ button {
   text-decoration: underline; }
 
 .crop {
-  width: 400px;
-  height: 200px;
+  width: 500px;
+  height: 210px;
   overflow: hidden;
   border-radius: 10px; }
   .crop img {
@@ -83,17 +88,22 @@ button {
 button {
   padding: 20px;
   background-color: #41B3A3;
-  color: inherit;
+  color: white;
   border: none;
   border-radius: 10px;
   box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
   cursor: pointer;
-  opacity: 0.8;
-  transition: step-start 0.3s;
+  opacity: 0.6;
+  transition: ease-in-out 0.4s;
   font-weight: bold;
   text-transform: uppercase; }
   button:hover {
-    opacity: 1; }
+    opacity: 1;
+    color: white; }
+
+.lrg-btn {
+  padding: 60px 100px;
+  font-size: 1.4em; }
 
 @media only screen and (max-width: 1200px) {
   .grid {
@@ -102,25 +112,67 @@ button {
     display: none; }
   header nav ul .fa-bars {
     display: block;
-    padding-bottom: 16px; }
+    padding-bottom: 8px; }
   .flex-down > p {
-    padding: 10px 20px !important; }
-  .crop2 {
-    width: 230px;
-    height: 170px;
-    overflow: hidden; } }
+    padding: 10px 20px !important; } }
 
-@media only screen and (max-width: 600px) {
-  .title {
-    font-size: 28px; } }
+@media only screen and (max-width: 800px) {
+  .crop2 {
+    width: 240px;
+    height: 220px; }
+  .crop3 {
+    width: 240px;
+    height: 160px; }
+  .outline {
+    margin: 20px !important;
+    padding: 10px !important; }
+    .outline > * {
+      padding: 10px !important; }
+  .lrg-btn {
+    padding: 20px 40px;
+    font-size: 1em; }
+  .fa-arrow-circle-up {
+    font-size: 1.4em !important; } }
 
 @media only screen and (max-width: 700px) {
   .grid2 {
-    grid-template-columns: repeat(auto-fill, minmax(210px, 1fr)) !important; }
+    grid-template-columns: repeat(auto-fill, minmax(340px, 1fr)) !important; } }
+
+@media only screen and (max-width: 600px) {
+  .grid2 {
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)) !important; }
   .crop {
-    width: 230px;
+    width: 390px;
+    height: 200px;
+    overflow: hidden; }
+  .grid2 .card {
+    width: 400px !important; } }
+
+@media only screen and (max-width: 500px) {
+  .grid2 {
+    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr)) !important; }
+    .grid2 .card {
+      min-height: 400px !important; }
+  .title, h2, p {
+    font-size: 18px; }
+  .crop {
+    width: 280px;
     height: 140px;
-    overflow: hidden; } }
+    overflow: hidden; }
+  .grid2 .card {
+    width: 300px !important; } }
+
+@media only screen and (max-width: 400px) {
+  .grid2 {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)) !important; }
+    .grid2 .card {
+      min-height: 410px !important; }
+  .crop {
+    width: 240px;
+    height: 120px;
+    overflow: hidden; }
+  .grid2 .card {
+    width: 236px !important; } }
 
 .flex-across {
   display: flex; }
@@ -130,15 +182,14 @@ button {
   flex-direction: column; }
   .flex-down > p {
     padding: 10px 200px; }
-  .flex-down .grid {
-    padding: 100px 0px; }
 
 .grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
   text-align: center;
-  grid-gap: 30px; }
+  grid-gap: 30px;
+  min-height: 80vh; }
   .grid .card {
     padding: 10px;
     transition: transform 1s; }
@@ -148,10 +199,12 @@ button {
 
 .reverse {
   direction: rtl; }
+  .reverse p {
+    direction: ltr; }
 
 .grid2 {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(550px, 1fr));
   grid-gap: 30px;
   align-items: center;
   text-align: center; }
@@ -159,12 +212,25 @@ button {
     padding: 10px;
     transition: transform 1s;
     border-radius: 10px;
-    min-height: 450px; }
-    .grid2 .card:hover {
-      box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8); }
-      .grid2 .card:hover img {
-        transition: transform 1s;
-        transform: scale(1.1); }
+    min-height: 460px;
+    max-height: 460px;
+    overflow: hidden;
+    width: 500px;
+    box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; }
+    .grid2 .card:hover img {
+      transition: transform 1s;
+      transform: scale(1.1); }
+
+.outline {
+  box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+  border-radius: 10px;
+  margin: 80px;
+  padding: 30px; }
+  .outline > * {
+    padding: 20px; }
 
 .container {
   margin: 20px 30px; }
@@ -174,13 +240,13 @@ header {
   flex-wrap: wrap;
   align-items: flex-end;
   margin: 20px 30px;
-  border-bottom: solid 2px #ff6472; }
+  border-bottom: solid 2px #ff6472;
+  padding-bottom: 6px; }
   header svg {
     padding: 2px 10px;
     cursor: pointer; }
   header .logo {
-    font-size: 26px;
-    font-family: inherit; }
+    font-size: 26px; }
   header nav ul {
     list-style: none;
     display: flex;
@@ -219,7 +285,7 @@ header {
 .tag {
   display: none; }
   .tag + label {
-    padding: 0px 20px;
+    padding: 10px 40px;
     box-shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
     cursor: pointer;
     transition: 0.2s ease-in-out;
@@ -227,10 +293,25 @@ header {
   .tag:checked + label {
     background-color: #41B3A3; }
 
-.article p p strong {
-  color: #ff6472;
-  font-size: 24px;
-  padding: 100px 0px 0px 0px; }
+label[for="fun"] {
+  border-radius: 10px 0px 0px 10px; }
+
+label[for="work"] {
+  border-radius: 0px 10px 10px 0px; }
+
+.article ul {
+  padding-left: 25px;
+  padding-bottom: 20px; }
+
+.article ol {
+  padding-left: 18px;
+  padding-bottom: 20px; }
+
+.article p p {
+  padding-bottom: 20px; }
+  .article p p strong {
+    color: #ff6472;
+    font-size: 24px; }
 
 .article a {
   text-decoration: underline; }
@@ -242,8 +323,8 @@ header {
 
 .fa-arrow-circle-up {
   position: fixed;
-  bottom: 60px;
-  right: 20px;
+  bottom: 10px;
+  right: 5px;
   font-size: 2em;
   color: #41B3A3;
   transition: 0.3s ease-in-out;
@@ -269,7 +350,8 @@ footer {
   margin: 20px 30px;
   flex-direction: row;
   justify-content: space-between;
-  border-top: solid 2px #ff6472; }
+  border-top: solid 2px #ff6472;
+  padding-top: 6px; }
   footer ul {
     display: flex;
     list-style: none; }
