--- a/src/scss/components/general.scss
+++ b/src/scss/components/general.scss
@@ -8,7 +8,6 @@
 
 html {
     height: 100%;
-    scroll-behavior: smooth !important;
 }
 
 body {
@@ -25,9 +24,6 @@ body {
     &.dark-mode {
         background-color: $background-color-dark;
         color: $background-color-light;
-        .toggler {
-            background-color: $secondary-color;
-        }
     }
 }
 
@@ -54,4 +50,8 @@ button {
 
 .mb10 {
     margin-bottom: 10px;
+}
+
+.m30 {
+    margin: 30px;
 }
