--- a/src/scss/components/media.scss
+++ b/src/scss/components/media.scss
@@ -3,23 +3,30 @@
     grid-template-columns: 1fr !important;
   }
   
-  header {
-    nav {
-      ul  {
-        li {
-          display: none;
-        }
-        .fa-bars {
-          display: block;
-          padding-bottom: 8px;
+  .header {
+      nav {
+        ul  {
+          li {
+            display: none;
+          }
+          .fa-bars {
+            display: block;
+            padding-bottom: 8px;
+          }
         }
       }
-    }
   }
-
+  
   .flex-down {
     > p {
         padding: 10px 20px !important;
+    }
+  }
+
+  .article {
+    > p {
+        padding: 10px 0px !important;
+        max-width: 100%;
     }
   }
 }
