--- a/src/scss/components/nav.scss
+++ b/src/scss/components/nav.scss
@@ -1,10 +1,15 @@
-header {
+.header {
+    position: sticky;
+    top: 0;   
+    z-index: 100;
+    padding-bottom: 6px;
     display: flex;
     flex-wrap: wrap;
     align-items: flex-end;
-    margin: 20px 30px;
+    padding: 20px;
+    margin: 0px 30px;
     border-bottom: solid 2px $tertiary-color;
-    padding-bottom: 6px;
+    backdrop-filter: blur(8px);
     svg {
     padding: 2px 10px;
     cursor: pointer;
@@ -17,9 +22,9 @@ header {
             list-style: none;
             display: flex;
             flex-direction: row;
-        li {
-            padding: 2px 10px;
-        }
+            li {
+                padding: 2px 10px;
+            }
         }
         .fa-bars {
             display: none;
@@ -28,18 +33,18 @@ header {
 }
 
 .mobile-nav {
-	height: 100%;
-	width: 100%;
-	position: fixed;
-	z-index: 2;
-	top: 0;
-	left: 0;
-	background-color: grey;
-	overflow-x: hidden;
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    backdrop-filter: blur(40px);
+    overflow-x: hidden;
     transition: 0.3s ease-in-out;
     ul {
         display: flex;
-        flex-direction: column;
+        flex-direction: column !important;
         position: relative;
         top: 25%;
         width: 100%;
@@ -47,6 +52,7 @@ header {
         margin-top: 30px;
         li {
             display: block !important;
+            padding: 10px !important;
         }
     }
     .fa-window-close {
