--- a/src/stylesheets/components/media.css
+++ b/src/stylesheets/components/media.css
@@ -1,13 +1,16 @@
 @media only screen and (max-width: 1200px) {
   .grid {
     grid-template-columns: 1fr !important; }
-  header nav ul li {
+  .header nav ul li {
     display: none; }
-  header nav ul .fa-bars {
+  .header nav ul .fa-bars {
     display: block;
     padding-bottom: 8px; }
   .flex-down > p {
-    padding: 10px 20px !important; } }
+    padding: 10px 20px !important; }
+  .article > p {
+    padding: 10px 0px !important;
+    max-width: 100%; } }
 
 @media only screen and (max-width: 800px) {
   .crop2 {
