--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -43,6 +43,29 @@ button {
 .m30 {
   margin: 30px; }
 
+.loading-background {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  z-index: 2;
+  padding-top: 100px;
+  backdrop-filter: blur(40px);
+  overflow-x: hidden;
+  transition: 0.3s ease-in-out; }
+  .loading-background .loading {
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid #ff6472;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite; }
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(360deg); } }
+
 h1, h2, h3, h4, h5, h6 {
   font-size: 28px; }
 
