--- a/src/scss/components/nav.scss
+++ b/src/scss/components/nav.scss
@@ -1,4 +1,4 @@
-.header {
+header {
     position: sticky;
     top: 0;   
     z-index: 100;
@@ -40,7 +40,7 @@
     top: 0;
     left: 0;
     backdrop-filter: blur(40px);
-    overflow-x: hidden;
+    overflow: hidden;
     transition: 0.3s ease-in-out;
     ul {
         display: flex;
