changed hero + add media queries

--- a/src/scss/components/buttons.scss
+++ b/src/scss/components/buttons.scss
@@ -16,6 +16,11 @@ button {
     }
 }
 
+.med-btn {
+    padding: 40px 60px;
+    font-size: 1em;
+}
+
 .lrg-btn {
     padding: 60px 100px;
     font-size: 1.4em;
