--- a/src/scss/components/general.scss
+++ b/src/scss/components/general.scss
@@ -52,6 +52,10 @@ button {
     margin-bottom: 10px;
 }
 
+.mb30 {
+    margin-bottom: 30px;
+}
+
 .m30 {
     margin: 30px;
 }
@@ -79,4 +83,3 @@ button {
         100% { transform: rotate(360deg); }
       }
 }
-
