--- a/src/scss/components/media.scss
+++ b/src/scss/components/media.scss
@@ -50,7 +50,7 @@
       }
   }
 
-  .lrg-btn {
+  .lrg-btn, .med-btn {
     padding: 20px 40px;
     font-size: 1em;
   }
@@ -91,8 +91,16 @@
       min-height: 400px !important;
     }
   }
+
+  .headline {
+    font-size: 24px;
+  }
+
+  .title {
+    font-size: 22px;
+  }
   
-  .title, h2, p {
+  h2, p {
     font-size: 18px;
   }
 
