--- a/src/scss/components/textchanges.scss
+++ b/src/scss/components/textchanges.scss
@@ -7,6 +7,11 @@ h1, h2, h3, h4, h5, h6 {
     text-align: center;
 }
 
+.headline {
+    font-size: 50px;
+    text-align: center;
+}
+
 .title {
     font-size: 36px;
     text-align: center;
