--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -330,6 +330,9 @@ header {
     right: 5%;
     font-size: 2em; }
 
+.remove-blur {
+  backdrop-filter: unset; }
+
 .tag {
   display: none; }
   .tag + label {
